--- a/app/assets/stylesheets/tweet.scss
+++ b/app/assets/stylesheets/tweet.scss
@@ -189,12 +189,11 @@
 
 .game-article {
   position: relative;
-  height: 100%;
+  // height: 100%;
 }
 
 .game_result {
   font-size: 30px;
   text-align: center;
   padding-top: 30px;
-  margin-top: 30px;
 }
