--- a/app/views/tweets/show.html.erb
+++ b/app/views/tweets/show.html.erb
@@ -1,12 +1,12 @@
 <div class="game-article">
   <div class="data-info">
-    <div class="choose-btn pt-3">
+    <!--<div class="choose-btn pt-3">
       <% if current_user.id == @tweet.user_id || current_user.admin? %>
       <%= link_to "記事を削除する","/tweets/#{@tweet.id}",method: :delete,data: { confirm: '削除しますか？' },class: "delete-btn"%>
       <%= link_to "記事を編集する","/tweets/#{@tweet.id}/edit",method: :get,class: "edit-article" %>
       <% end %>
       <%= link_to "記事一覧へ戻る",tweets_path,class: "return-btn",data: {"turbolinks" => false} %>
-    </div>
+    </div>-->
     <!--<div class="user_name">
       <h5>投稿者 <%= link_to "#{@tweet.user.nickname}","/users/#{@tweet.user_id}"%></h5>
       <% if @user.image.present?%>
@@ -36,18 +36,16 @@
     </div>
     <%= image_tag "#{@tweet.image}",width: "400",class: "image" %>-->
     <%# いいね %>
-    <div id="app">
-    </div>
-    <div id="like">
+    <!--<div id="like">
       <%= render partial: 'likes/like', locals: { tweet: @tweet} %>
     </div>
     <p>いいねをしたユーザー</p><br>
     <% @tweet.liked_users.each do |user|%>
       <%= link_to "#{user.nickname}","/users/#{user.id}" %><br>
     <% end %>
-  </div>
-  <%# コメント %>
-  <div class="comment-content_tweet">
+  </div>-->
+  
+  <!--<div class="comment-content_tweet">
     <div class="comment"> 
       <div class="text-format mt-0 mb-4 text-warning">
         <i class="fa fa-baseball-ball text-warning"></i>
@@ -58,7 +56,7 @@
       </div>
     </div>
     <div class="comment-form"> 
-      <%= render partial: 'comments/form', locals: { comment: @comment, tweet: @tweet } %>
+      <%= render partial: 'comments/form', locals: { comment: @comment, tweet: @tweet } %>-->
     </div>
   </div>
 <%= javascript_pack_tag 'main' %>
