--- a/app/views/analyses/index.html.erb
+++ b/app/views/analyses/index.html.erb
@@ -1,7 +1,7 @@
 <div class="main-content">
   <div class="wrap">
     <%= render partial: "slide/slide"%>
-    <div class="center">
+    <!--<div class="center">
       <div class="main-content-btn">
         <% if user_signed_in? %>
           <%= link_to "投稿する",new_analysis_path,class: "send_btn"%>
@@ -24,7 +24,7 @@
           <% end %>
         <% end %>
       </div>
-      <!--<%= form_with(url: search_analyses_path, local: true, method: :get, class: "search mt-5 pb-5") do |form| %>
+      <%= form_with(url: search_analyses_path, local: true, method: :get, class: "search mt-5 pb-5") do |form| %>
         <%= form.text_field :keyword, placeholder: "記事を検索する", class: "search-input" %>
         <%= form.submit "検索", class: "search-btn" %>
       <% end %>
