--- a/app/views/analyses/index.html.erb
+++ b/app/views/analyses/index.html.erb
@@ -1,7 +1,7 @@
 <div class="main-content">
   <div class="wrap">
-    <%= render partial: "slide/slide"%>
-    <!--<div class="center">
+    <!--<%= render partial: "slide/slide"%>
+    <div class="center">
       <div class="main-content-btn">
         <% if user_signed_in? %>
           <%= link_to "投稿する",new_analysis_path,class: "send_btn"%>
