--- a/app/views/analyses/show.html.erb
+++ b/app/views/analyses/show.html.erb
@@ -73,4 +73,5 @@
     </div>
   </div>
 </div>
-<%= javascript_pack_tag 'analysis' %>
+<%# <%= javascript_pack_tag 'analysis' %> %>
+<%= javascript_pack_tag 'main' %>
