--- a/app/views/tweets/show.html.erb
+++ b/app/views/tweets/show.html.erb
@@ -1,5 +1,5 @@
-<div class="game-article">
-  <div class="data-info">
+<%# <div class="game-article">
+  <div class="data-info"> %>
     <!--<div class="choose-btn pt-3">
       <% if current_user.id == @tweet.user_id || current_user.admin? %>
       <%= link_to "記事を削除する","/tweets/#{@tweet.id}",method: :delete,data: { confirm: '削除しますか？' },class: "delete-btn"%>
@@ -57,6 +57,6 @@
     </div>
     <div class="comment-form"> 
       <%= render partial: 'comments/form', locals: { comment: @comment, tweet: @tweet } %>-->
-    </div>
-  </div>
+    <%# </div>
+  </div> %>
 <%= javascript_pack_tag 'main' %>
