--- a/app/views/tournaments/watch_ays.html.erb
+++ b/app/views/tournaments/watch_ays.html.erb
@@ -1,5 +1,5 @@
-<div class="main-content">
-  <div class="wrap">
+ <!--<div class="main-content">
+  <div class="wrap"> %>
     <div class="main-content-btn mt-1">
       <% if user_signed_in? %>
         <%= link_to "投稿する",new_analysis_path,class: "send_btn", data: {"turbolinks" => false} %>
@@ -35,5 +35,5 @@
       <% end %>
     </div>
   </div>
-</div>
+</div> %>-->
 <%= javascript_pack_tag 'main' %>
