大会別 SPA途中

--- a/app/views/tournaments/watch_fcs.html.erb
+++ b/app/views/tournaments/watch_fcs.html.erb
@@ -1,4 +1,4 @@
-<div class="main-content">
+<!--<div class="main-content">
   <div class="wrapper wrap">
     <div class="main-content-btn mt-1">
       <% if user_signed_in? %>
@@ -31,5 +31,5 @@
       <% end %>
     </div>
   </div>
-</div>
+</div>-->
 <%= javascript_pack_tag 'main' %>
