vue導入によりコメントアウト

--- a/app/views/forecasts/show.html.erb
+++ b/app/views/forecasts/show.html.erb
@@ -1,4 +1,4 @@
-<div class="forecast-show_content">
+<!--<div class="forecast-show_content">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.2/Chart.bundle.js"></script>
   <div class="content-fcs_show">
     <%# ボタン %>
@@ -69,5 +69,5 @@
     </div>
   </div>
 </div>
+<%= javascript_pack_tag 'forecast' %>-->
 <%= javascript_pack_tag 'main' %>
-<%= javascript_pack_tag 'forecast' %>
