--- a/app/views/champions/show.html.erb
+++ b/app/views/champions/show.html.erb
@@ -1,4 +1,4 @@
-<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.2/Chart.bundle.js">
+<!--<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.2/Chart.bundle.js">
 </script>
 <div class="champion-content">
   <div class="main-content-btn">
@@ -37,11 +37,10 @@
   <div class="text-format ">
     投票結果
   </div>
-  <%# 投票結果 %>
   <%# <div class="reader">
     <div style="width:75%; height:75%;" ><canvas id="myBarChart"></canvas></div>
   </div> %>
-  <h4 class="text-center mt-5">全投票</h4>
+  <!--<h4 class="text-center mt-5">全投票</h4>
   <% @school.each do |school| %>
     <div class="school-cp mt-5">
       <i class="fas fa-baseball-ball text-white bg-primary"></i>
@@ -51,5 +50,5 @@
     <% @n+=1%>
   <% end %>
   <%= javascript_pack_tag 'champion' %>
-</div>
+</div>-->
 <%= javascript_pack_tag 'main'%>
