--- a/app/assets/stylesheets/tweet.scss
+++ b/app/assets/stylesheets/tweet.scss
@@ -200,3 +200,10 @@
   text-align: center;
   padding-top: 30px;
 }
+
+.search-area {
+  background-color: white;
+  width: 20%;
+  margin: 0 auto;
+  border-radius: 10px;
+}
