--- a/app/views/tweets/new.html.erb
+++ b/app/views/tweets/new.html.erb
@@ -1,4 +1,4 @@
-<div class="contents row mt-2">
+<!--<div class="contents row mt-2">
   <div class="containe_r p-4">
     <%= form_with model: @tweet, local: true do |f| %>
     <%= render 'layouts/error_messages', model: f.object %>
@@ -12,5 +12,5 @@
       <%= link_to "戻る",tweets_path,data: {"turbolinks" => false} %>
     </div>
   </div>
-</div>
+</div>-->
 <%= javascript_pack_tag 'main' %>
