--- a/app/views/forecasts/edit.html.erb
+++ b/app/views/forecasts/edit.html.erb
@@ -1,4 +1,4 @@
-<div class="contents row pt-3">
+<!--<div class="contents row pt-3">
   <div class="form">
     <%= form_with model: @forecast,local: true do |f| %>
       <%= render 'layouts/error_messages_fcs', model: f.object %>
@@ -17,5 +17,5 @@
     <%=f.submit value: "SENT",class: "game_record"%>
     <% end %>
   </div>
-</div>
+</div>-->
 <%= javascript_pack_tag 'main' %>
