erbコメントアウト

--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,4 +1,4 @@
-<div class="contents row pt-3">
+<!--div class="contents row pt-3">
   <% if current_user.nickname == "ゲスト"%>
     <h5>ゲストユーザーは編集できません</h5>
   <% end %>
@@ -15,5 +15,5 @@
       <%= link_to "戻る","/users/#{current_user.id}",data: {"turbolinks" => false} %>
     </div>
   </div>
-</div>
+</div>-->
 <%= javascript_pack_tag 'main' %>
