--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,4 @@
-<div class="mypage-content pt-3">
+<!--<div class="mypage-content pt-3">
   <%# <%= link_to "戻る",'javascript:history.back()',class: "return-top ml-2" %> 
   <%= link_to "トップページへ戻る",root_path,class: "return-top-mypage"%>
   <%= link_to "ユーザー一覧",users_path,class: "users-btn" %>
@@ -74,5 +74,5 @@
       </div>
     </div>
   </div>
-</div>
+</div>-->
 <%= javascript_pack_tag 'main' %>
