--- a/app/views/users/show_follower.html.erb
+++ b/app/views/users/show_follower.html.erb
@@ -1,4 +1,4 @@
-<div class="user-content pt-5">
+<!--<div class="user-content pt-5">
   <h2>フォロワー <%= @user.followers.count %>人</h2>
   <div class="user-list row">
     <% @users.each do |user| %>
@@ -6,4 +6,5 @@
     <% end %>
     <%= paginate @users %>
   </div>
-</div>
+</div>-->
+<%= javascript_pack_tag 'main' %>
