トップページ仮

--- a/app/views/tops/index.html.erb
+++ b/app/views/tops/index.html.erb
@@ -1,4 +1,4 @@
-<div class="top-main">
+<!--<div class="top-main">
   <div id="app">
     <div v-show="show">
       <div class="top-container">
@@ -8,9 +8,9 @@
               高校野球コネクト
             </div>
             <li>
-            <%= link_to tweets_path,class: "btn btn-cool-blues",data: {"turbolinks" => false} do %>
+            <%# <%= link_to tweets_path,class: "btn btn-cool-blues",data: {"turbolinks" => false} do %> %>
               <i class="fas fa-edit"></i>試合記事
-            <% end %>
+            <%# <% end %> %>
             </li>
             <li>
             <%= link_to analyses_path,class: "btn btn-green-moon",data: {"turbolinks" => false}  do %>
@@ -44,4 +44,5 @@
     </div>
   </div>
 </div>
-<%= javascript_pack_tag 'top' %>
+<%# <%= javascript_pack_tag 'top' %> -->
+<%= javascript_pack_tag 'main' %>
