--- a/app/views/tops/index.html.erb
+++ b/app/views/tops/index.html.erb
@@ -13,13 +13,13 @@
             <%# <% end %> %>
             </li>
             <li>
-            <%= link_to analyses_path,class: "btn btn-green-moon",data: {"turbolinks" => false}  do %>
+            <%# <%= link_to analyses_path,class: "btn btn-green-moon",data: {"turbolinks" => false}  do %> %>
               <i class="fas fa-search"></i>戦力分析
-            <% end %>
+            <%# <% end %> %>
             </li>
-            <%= link_to forecasts_path,class: "btn btn-orange-moon",data: {"turbolinks" => false} do %>
+            <%# <%= link_to forecasts_path,class: "btn btn-orange-moon",data: {"turbolinks" => false} do %> %>
               <i class="fas fa-baseball-ball"></i>試合予想
-            <% end %>
+            <%# <% end %> %>
           </div>
         </transition>
         <div class="top-image_one">
