--- a/app/views/rooms/show.html.erb
+++ b/app/views/rooms/show.html.erb
@@ -13,33 +13,33 @@
     <% end %>
   </div>
   <div class="dmMain">
-    <% @messages.each do |message| %>
-      <% if message.user.id == current_user.id%>
+    <%# <% @messages.each do |message| %> %>
+      <%# <% if message.user.id == current_user.id%> %>
         <div class="my-messages">
-          <p class="my-message mt-5 ml-5"><%= message.body %></p>
+          <%# <p class="my-message mt-5 ml-5"><%= message.body %></p> %>
         </div>
       <% else %>
         <div class="messages">
-          <% if message.user.image.present? %>
-            <%= link_to image_tag("#{message.user.image}",class: "user-icon mt-3"),"/users/#{message.user_id}" %>
-          <% else %>
-            <%= link_to image_tag("no-image.png",class: "user-icon mt-3"),"/users/#{message.user_id}" %>
-          <% end %>
-          <p class="message mt-5 ml-5"><%= message.body %></p>
+          <%# <% if message.user.image.present? %> %>
+            <%# <%= link_to image_tag("#{message.user.image}",class: "user-icon mt-3"),"/users/#{message.user_id}" %> %>
+          <%# <% else %> %>
+            <%# <%= link_to image_tag("no-image.png",class: "user-icon mt-3"),"/users/#{message.user_id}" %> %>
+          <%# <% end %> %>
+          <%# <p class="message mt-5 ml-5"><%= message.body %></p> %>
         </div>
-      <% end %>
-    <% end %>
+      <%# <% end %> %>
+    <%# <% end %> %>
   </div>
   <div class="message-input">
-    <%= form_for @message do |f| %>
+    <%# <%= form_for @message do |f| %> %>
       <div class="message-form">
-      <%= f.text_field :body , size: 100 %>
-      <%= f.hidden_field :room_id, :value => @room.id %>
-      <%= button_tag type: 'submit',class: "message-btn ml-3" do %>
+      <%# <%= f.text_field :body , size: 100 %> %>
+      <%# <%= f.hidden_field :room_id, :value => @room.id %> %>
+      <%# <%= button_tag type: 'submit',class: "message-btn ml-3" do %> %>
         <i class="fas fa-paper-plane"></i>
-      <% end %>
+      <%# <% end %> %>
       </div>
-    <% end %>
+    <%# <% end %> %>
   </div>
 </div>-->
 <%= javascript_pack_tag 'main' %>
