--- a/app/views/users/_my_analyses.html.erb
+++ b/app/views/users/_my_analyses.html.erb
@@ -4,7 +4,7 @@
 <div class="my-post-list">
   <% @my_analysis.each do |analysis|%>
     <div class="my-analysis mt-5">
-      <%= link_to analysis do %>
+      <%# <%= link_to analysis do %> %>
         <div class="school_ays-name">
           <%= analysis.school.name %>
         </div>
@@ -21,7 +21,7 @@
         <div class="analyses_at">
           <%= analysis.created_at.strftime("%Y年%m月%d日 %H時%M分")%>
         </div>
-      <% end %>
+      <%# <% end %> %>
     </div>
   <% end %>
 </div>
