--- a/app/views/users/_my_tweets.html.erb
+++ b/app/views/users/_my_tweets.html.erb
@@ -4,7 +4,7 @@
 <div class="my-post-list">
   <% @my_tweet.each do |tweet|%>
     <div class="my-article mt-5">
-      <%= link_to tweet do %>
+      <%# <%= link_to tweet do %> %>
         <div class="article-title">
           <%= tweet.school_a.name %>
           vs
@@ -23,7 +23,7 @@
         <div class="tweets_at">
           <%= tweet.created_at.strftime("%Y年%m月%d日 %H時%M分")%>
         </div>
-      <% end %>
+      <%# <% end %> %>
     </div>
   <% end %>
 </div>
