APIで通知を取得

--- a/app/views/tweets/_header.html.erb
+++ b/app/views/tweets/_header.html.erb
@@ -9,11 +9,11 @@
     <%= link_to notifications_path, class: "info" do %>
       <i class="fa fa-bell"></i>通知
     <% end %>
-    <% if unchecked_notifications.any? %>
+    <%# <% if unchecked_notifications.any? %> %>
       <%= link_to notifications_path, class: "new_info" do %>
         <i class="fa fa-circle fa-xs" style="color: gold;">新着あり</i>
       <% end %>
-    <% end %>
+    <%# <% end %> %>
   <% end %>
   <% if user_signed_in? %>
     <%= link_to "/users/#{current_user.id}",data: {"turbolinks" => false},class: "mypage" do %>
