--- a/app/assets/stylesheets/maps.scss
+++ b/app/assets/stylesheets/maps.scss
@@ -66,8 +66,8 @@
 }
 
 #map {
-  height: 60vh;
-  width: 45%;
+  height: 100%;
+  width: 100%;
   margin-left:auto;
   margin-right:auto;
   text-align:left;
