--- a/app/views/maps/show.html.erb
+++ b/app/views/maps/show.html.erb
@@ -1,4 +1,4 @@
-<script type="text/javascript">
+<!--<script type="text/javascript">
     function initMap() {
 
         var test ={lat: <%= @latitude %>, lng: <%= @longitude %>};
@@ -53,5 +53,5 @@
     </div>
   </div>
 <div id="map"></div>
-</div>
-<%# <%= javascript_pack_tag 'main'%> %>
+</div>-->
+<%= javascript_pack_tag 'main' %>
