--- a/app/views/maps/new.html.erb
+++ b/app/views/maps/new.html.erb
@@ -1,4 +1,4 @@
-<div class="contents row mt-2">
+<!--<div class="contents row mt-2">
   <div class="containe_r p-4">
     <%= form_with model: @map, local: true do |f| %>
       <% if flash[:notice] %>
@@ -16,4 +16,5 @@
       <% end %>
     <% end %>
   </div>
-</div>
+</div>-->
+<%= javascript_pack_tag 'main' %>
