大会別　デザイン

--- a/app/assets/stylesheets/tournament.scss
+++ b/app/assets/stylesheets/tournament.scss
@@ -69,10 +69,10 @@
 }
 
 .tournament-main{
-  background-image: image-url("sky.jpg");
-   background-size: cover;
-   background-color:rgba(255,255,255,0.8);
-   background-blend-mode:lighten;
+  // background-image: image-url("sky.jpg");
+  //  background-size: cover;
+  //  background-color:rgba(255,255,255,0.8);
+  //  background-blend-mode:lighten;
    flex: 1 1 100%;
    min-height: 900px;
 }
