--- a/app/assets/stylesheets/tournament.scss
+++ b/app/assets/stylesheets/tournament.scss
@@ -61,7 +61,8 @@
   justify-content: space-evenly;
   &-child {
     float: left;
-    background-color: #68ccf9;
+    // background-color: #68ccf9;
+    background-color: rgb(195, 194, 194);
     font-weight: bold;
     overflow: hidden;
     font-size: 15px;
