--- a/app/assets/stylesheets/analyses.scss
+++ b/app/assets/stylesheets/analyses.scss
@@ -2,10 +2,10 @@
   width: 100%;
   height: 100%;
   min-height: 900px;
-  background-image: image-url("photo0000-0331.jpg");
-  background-size: cover;
-  background-color:#ffffff80;
-  background-blend-mode:lighten;
+  // background-image: image-url("photo0000-0331.jpg");
+  // background-size: cover;
+  // background-color:#ffffff80;
+  // background-blend-mode:lighten;
   flex: 1 1 100%;
 }
 
@@ -14,13 +14,10 @@
 }
 
 .analysis {
-  width: 800px;
-  max-width: 100%;
-  margin: 0 auto;
-  background-color: lime;
-  position: relative;
+  width: 400px;
+  height: 140px;
+  background-color: #f3f3f3;
   border: solid 1px rgb(255, 255, 255);
-  text-align: center;
   &-image {
     position: absolute;
     width: 10%;
@@ -49,8 +46,8 @@
 }
 
 .school_ays-name {
-  color: white;
-  font-size: 30px;
+  color: black;
+  font-size: 25px;
   text-align: center;
   font-weight: bold;
 }
