--- a/app/assets/stylesheets/forecast.scss
+++ b/app/assets/stylesheets/forecast.scss
@@ -1,9 +1,9 @@
 .school-fcs{
   display: flex;
   justify-content: space-evenly;
-  text-align: center;
-  font-size: 26px;
-  padding-top: 6px;
+  font-size: 20px;
+  color: black;
+  font-weight: bold;
 }
 
 .text_fcs{
@@ -11,33 +11,27 @@
   padding-bottom: 20px;
 }
 
-.win-school_fcs,.lose-school_fcs{
-  // margin-top: 1px;
-  font-size: 25px;
-  color: rgb(255, 253, 253);
-  font-weight: bold;
-}
-
 .forecast {
-  margin-top: 90px;
-  width: 800px;
-  max-width: 100%;
-  margin: 0 auto;
+  width: 400px;
+  height: 140px;
+  background-color: #f3f3f3;
+  border: solid 1px rgb(255, 255, 255);
   // background: -moz-linear-gradient(#ffb03c, #ff708d);
   // background: -webkit-linear-gradient(#ffb03c, #ff708d);
   // background: linear-gradient(to right, #ffb03c, #ff708d);
-  background-color: rgb(250, 142, 42);
-  position: relative;
+  // background-color: rgb(250, 142, 42);
+  // position: relative;
   &:hover {
     opacity: 0.7;
   }
 }
 
 .forecast-main {
-  background-image: image-url("sky_00148.jpg");
-  background-size: cover;
-  background-color:rgba(255,255,255,0.5);
-  background-blend-mode:lighten;
+  // background-image: image-url("sky_00148.jpg");
+  // background-size: cover;
+  // background-blend-mode:lighten;
+  // background-color:rgba(255,255,255,0.5);
+  text-align: center;
   min-height: 1100px;
   flex: 1 1 100%;
 }
