--- a/app/assets/stylesheets/analyses.scss
+++ b/app/assets/stylesheets/analyses.scss
@@ -1,7 +1,7 @@
 .analysis-main,.search-ays {
   width: 100%;
   height: 100%;
-  min-height: 900px;
+  // min-height: 900px;
   // background-image: image-url("photo0000-0331.jpg");
   // background-size: cover;
   // background-color:#ffffff80;
