--- a/app/assets/stylesheets/tournament.scss
+++ b/app/assets/stylesheets/tournament.scss
@@ -74,8 +74,8 @@
   //  background-size: cover;
   //  background-color:rgba(255,255,255,0.8);
   //  background-blend-mode:lighten;
-   flex: 1 1 100%;
-   min-height: 900px;
+  //  flex: 1 1 100%;
+  //  min-height: 900px;
 }
 
 @media screen and (max-width: 679px) {
