--- a/app/assets/stylesheets/maps.scss
+++ b/app/assets/stylesheets/maps.scss
@@ -5,14 +5,18 @@
     width: 45%;
     margin: 0 auto;
   }
-  &-name {
-    font-size: 1.5rem;
-    color: black;
-    font-size: 1.8rem;
+  &-deta {
+    height: 140px;
+    background-color: white;
   }
+  // &-name {
+  //   font-size: 1.5rem;
+  //   color: black;
+  //   font-size: 1.8rem;
+  // }
   &-content {
   background-color: #f6f6d1;
-  // min-height: 100%;
+  // height: 100%;
   }
   &-card {
   border: none;
@@ -31,9 +35,6 @@
       height: 50px;
       border-radius: 50%;
       border: 2px solid  rgb(192, 189, 189);
-    }
-    &_image {
-      background-color: white;
     }
   }
   &-list {
