--- a/app/assets/stylesheets/new.scss
+++ b/app/assets/stylesheets/new.scss
@@ -44,16 +44,16 @@ a{
   color: black;
 }
 
-.game_record,.game_title{
-  margin-top: 20px;
-  width: 100%;
-  height: 25px;
-}
+// .game_record,.game_title{
+//   margin-top: 20px;
+//   width: 100%;
+//   height: 25px;
+// }
 
-textarea{
-  margin-top: 20px;
-  width: 100%;
-}
+// textarea{
+//   margin-top: 20px;
+//   width: 100%;
+// }
 
 
 input{
