--- a/app/assets/stylesheets/analyses.scss
+++ b/app/assets/stylesheets/analyses.scss
@@ -120,7 +120,7 @@
 .select {
   margin-top: 20px;
   display: flex;
-  justify-content: space-evenly;
+  // justify-content: space-evenly;
 }
 
 // /*詳細
