デザイン変更

--- a/app/assets/stylesheets/room.scss
+++ b/app/assets/stylesheets/room.scss
@@ -18,6 +18,11 @@
   padding-bottom: 10%;
 }
 
+.dm-content {
+  background-color: #EEFFFF;
+  height: 100%;
+}
+
 .room-member {
   display: inline-flex;
   flex-direction: column;
