--- a/app/assets/stylesheets/maps.scss
+++ b/app/assets/stylesheets/maps.scss
@@ -1,19 +1,17 @@
 .map{
-  background-image: image-url('japan.jpg');
-  background-size: 300px 300px;
+  background-image: image-url('sky.jpg');
+  background-size: cover;
+  background-color: rgba(255,255,255,0.8);
+  background-blend-mode: lighten;
+  flex: 1 1 100%;
   &-info {
-    width: 45%;
+    width: 55%;
     margin: 0 auto;
   }
   &-deta {
     height: 140px;
     background-color: white;
   }
-  // &-name {
-  //   font-size: 1.5rem;
-  //   color: black;
-  //   font-size: 1.8rem;
-  // }
   &-content {
   background-color: #f6f6d1;
   // height: 100%;
@@ -40,28 +38,34 @@
   &-list {
     text-align: center;
   }
-  &-text {
-    border: solid;
+  &-adress {
     border-width: 0 2px 2px 2px;
     font-size: 1.2rem;
-    background-color: #f6f6d1;
     min-height: 100px;
+  }
+  &-text {
+    margin-top: 10%;
+    display: flex;
   }
   &-school {
     margin-top: 10%;
-    font-size: 1.8rem;
+    font-size: 2.2rem;
     text-align: center;
-    border: solid 2px;
-    background-color: #f6f6d1;
+    font-weight: bold;
+    color: rgb(248, 120, 231);
+    font-style: italic;
+    font-family: Times New Roman, "ＭＳ Ｐゴシック";
   }
   &-image {
-    border: solid;
+    // border: solid;
     border-width: 0 2px 2px 2px;
-    background: cover;
+    background-size: cover;
     margin: initial;
-    width: 100%;
+    // width: 100%;
+    height: auto;
     &_content {
       width: 100%;
+      height: 100%;
     }
   }
 }
@@ -72,7 +76,7 @@
   margin-left:auto;
   margin-right:auto;
   text-align:left;
-  border: solid;
+  // border: solid;
   border-width: 0 2px 2px 2px;
 }
 
