--- a/app/assets/stylesheets/tournament.scss
+++ b/app/assets/stylesheets/tournament.scss
@@ -58,7 +58,7 @@
 
 .title {
   padding-bottom: 5%;
-  justify-content: space-evenly;
+  justify-content: center;
   &-child {
     float: left;
     // background-color: #68ccf9;
@@ -69,14 +69,14 @@
   }
 }
 
-.tournament-main{
-  // background-image: image-url("sky.jpg");
-  //  background-size: cover;
-  //  background-color:rgba(255,255,255,0.8);
-  //  background-blend-mode:lighten;
-  //  flex: 1 1 100%;
-  //  min-height: 900px;
-}
+// .tournament-main{
+//   // background-image: image-url("sky.jpg");
+//   //  background-size: cover;
+//   //  background-color:rgba(255,255,255,0.8);
+//   //  background-blend-mode:lighten;
+//   //  flex: 1 1 100%;
+//   //  min-height: 900px;
+// }
 
 @media screen and (max-width: 679px) {
   .analysis-image {
