--- a/app/assets/stylesheets/show.scss
+++ b/app/assets/stylesheets/show.scss
@@ -62,7 +62,7 @@ input {
   &-content {
     background-color: rgba(236, 236, 206,0.4);
     // min-height: 780px;
-    &_tweet {
+    &_common {
       background-color: rgba(236, 236, 206,0.4);
       min-height: 780px;
     }
