クラス追加

--- a/app/assets/stylesheets/user.scss
+++ b/app/assets/stylesheets/user.scss
@@ -45,6 +45,12 @@
   }
 }
 
+.follow-user-content {
+  width: 900px;
+  background-color: #EEFFFF;
+  height: 100%;
+}
+
 .stats {
   font-size: 18px;
 }
