クラス名修正

--- a/app/assets/stylesheets/analyses.scss
+++ b/app/assets/stylesheets/analyses.scss
@@ -63,7 +63,7 @@
 // }
 
 
-.attack,.defencive,.pitcher,.comprehensive,.expectations {
+.attack,.defensive,.pitcher,.comprehensive,.expectations {
   margin-right: 10px;
 }
 
