デザイン修正

--- a/app/assets/stylesheets/mypage.scss
+++ b/app/assets/stylesheets/mypage.scss
@@ -11,6 +11,10 @@
   margin-top: 80px;
 }
 
+.theme--light.v-tabs-items {
+  background-color: #EEFFFF;
+}
+
 .text-myname,.my-links,.dm {
   margin-bottom: 50px;
 }
