--- a/app/views/layouts/vue.html.erb
+++ b/app/views/layouts/vue.html.erb
@@ -11,6 +11,9 @@
     <link rel="stylesheet" href="https://cdn.bootcss.com/bootstrap/3.3.5/css/bootstrap.css">
     <link href="https://cdn.jsdelivr.net/npm/vuetify@2.x/dist/vuetify.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/@mdi/font@5.x/css/materialdesignicons.min.css" rel="stylesheet">
+    <%# ダイアログ %>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/vuejs-dialog@1.4.1/dist/vuejs-dialog.min.css">
+    <script src="https://cdn.jsdelivr.net/npm/vuejs-dialog@1.4.1/dist/vuejs-dialog.min.js"></script>
     <style type="text/css">
         a, a:visited, a:focus, a:hover {
           text-decoration: none;
