--- a/app/assets/stylesheets/mypage.scss
+++ b/app/assets/stylesheets/mypage.scss
@@ -12,8 +12,8 @@
 }
 
 .theme--light.v-tabs-items {
-  background-color: #EEFFFF;
-}
+  background-color: transparent;
+} 
 
 .text-myname,.my-links,.dm {
   margin-bottom: 50px;
