クラス変更

--- a/app/assets/stylesheets/show.scss
+++ b/app/assets/stylesheets/show.scss
@@ -1,4 +1,4 @@
-.edit-article,.return-btn,.return-top,.return-top-mypage,.return-btn_watch,.return-fcs,.users-btn,.dm-btn {
+.edit,.return-btn,.return-top,.return-top-mypage,.users-btn,.dm-btn {
   padding: 5px;
   color: #fff;
   border-top: 4px solid #48ecc4;
