--- a/app/assets/stylesheets/tweet.scss
+++ b/app/assets/stylesheets/tweet.scss
@@ -7,8 +7,9 @@
 }
 
 .header,.analysis_header {
+  text-align: center;
   font-size: 40px;
-  height: 300px;
+  height: 100px;
   position: relative;
   background-size: cover;
   background-position: center center;
@@ -20,11 +21,13 @@
 
 .slider-inner{
   position: absolute;
-  width: 100%;
-  height: 300px;
+  margin-left: 25%;
+  width: 50%;
+  height: 100px;
 }
 .slide-img {
-  width: 100%;
+  margin: 0 auto;
+  width: 50%;
   height: 100%;
   object-fit: hidden;
 }
