--- a/app/assets/stylesheets/analyses.scss
+++ b/app/assets/stylesheets/analyses.scss
@@ -62,6 +62,11 @@
 //   margin-top: 5px;
 // }
 
+#canvas_wrapper{
+	width:460px;
+	margin:0 auto;
+}
+
 
 .attack,.defensive,.pitcher,.comprehensive,.expectations {
   margin-right: 10px;
